# suksham-vachak

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FOR-AMAN.md  LICENSE  Makefile  README.md  ROADMAP.md  cliff.toml  demo_llm_commentary.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/agents/: implementation-planner.md
.devcontainer/: devcontainer.json
.github/workflows/: on-release-main.yml
data/: README.md
data/cricsheet_sample/: 1000851.json  1000853.json  1000855.json  1000881.json  1000883.json  1000885.json  1000887.json  1000889.json  1000891.json  1000893.json  1000895.json  1001349.json  1001351.json  1001353.json  1001371.json  1001373.json  1001375.json  1002143.json  1002145.json  1002147.json
data/curated/: iconic_moments.yaml
deploy/pi/: .env.example  docker-compose.yml
docs/: AGENTIC.md  ARCHITECTURE.md  CHANGELOG.md  DATA_JOURNEY.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  PROJECT_NARRATIVE.md  PROTOTYPE_BUILD_SCRIPT.md  VISION.md  architecture.d2  index.md  modules.md  roadmap.md
docs/adr/: ADR-001-poetry-cookiecutter-scaffold.md  ADR-002-ruff-pyright-precommit.md  ADR-003-cricsheet-data-source.md  ADR-004-persona-driven-commentary.md  ADR-005-hindi-transcreation.md  ADR-006-fastapi-dataclasses.md  ADR-007-nextjs-frontend.md  ADR-008-context-pressure-model.md  ADR-009-commentary-fallback-chain.md  ADR-010-ollama-claude-auto-detection.md  ADR-011-sqlite-stats-no-orm.md  ADR-012-chromadb-voyage-rag.md  ADR-013-structlog-correlation-ids.md  ADR-014-tts-provider-abstraction.md  ADR-015-elevenlabs-primary-tts.md  ADR-016-docker-raspberry-pi.md  ADR-017-toon-serialization.md  ADR-018-agentic-architecture.md  ADR-019-local-tts-providers.md  ADR-020-emotion-tags-svara.md  ADR-021-hybrid-vision-pipeline.md  ADR-022-commentary-singularity.md  README.md
docs/guides/: LLM_FINETUNING_PRIMER.md  PERSONA_TRAINING_WORKFLOW.md
docs/plans/: fine-tuning-pipeline.md  ios-app.md  mcp-architecture.md  saas-architecture.md
frontend/: Dockerfile  package-lock.json  package.json
notebooks/: cricket_data_exploration.ipynb
scripts/: deploy-to-pi.sh  docker-entrypoint.sh  evaluate_models.py
scripts/vision/: archive_sessions.sh  capture_rtsp.py  label_frames.py  scorecard_monitor.py
suksham_vachak/: logging.py
suksham_vachak/api/: __init__.py  app.py  middleware.py  routes.py
suksham_vachak/commentary/: __init__.py  engine.py  llm.py  prompts.py
suksham_vachak/context/: __init__.py  builder.py  models.py  narrative.py  pressure.py
suksham_vachak/eval/: __init__.py  benchmark.py  quality.py  report.py
suksham_vachak/parser/: __init__.py  cricsheet.py  events.py
suksham_vachak/personas/: __init__.py  base.py  benaud.py  doshi.py  greig.py
suksham_vachak/rag/: __init__.py  cli.py  config.py  embeddings.py  models.py  retriever.py  store.py
suksham_vachak/serialization/: __init__.py  toon_encoder.py
suksham_vachak/stats/: __init__.py  aggregator.py  cli.py  config.py  db.py  form.py  matchups.py  models.py  normalize.py  phases.py
suksham_vachak/tts/: __init__.py  azure.py  base.py  elevenlabs.py  (+6 more)
tests/: test_commentary.py  test_context.py  test_llm_commentary.py  test_parser.py  test_processing.py  test_rag.py  test_stats.py  test_toon_serialization.py  test_tts.py  test_tts_emotion.py  test_tts_qwen3.py  test_tts_svara.py
(+13 files in other folders)
