[tool.poetry]
name = "suksham_vachak"
version = "0.0.1"
description = "Suksham Vāchak (सूक्ष्म वाचक) — An intelligent, lightweight AI engine for generating natural cricket commentary from structured match events."
authors = ["Aman Misra <amanmisra@globalveda.net>"]
repository = "https://github.com/dev-globalveda/suksham-vachak"
documentation = "https://dev-globalveda.github.io/suksham-vachak/"
readme = "README.md"
packages = [
  {include = "suksham_vachak"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Phase 1: Core dependencies
openai = "^1.0"              # LLM API (works with Foundry Local, Ollama, OpenAI)
anthropic = "^0.40.0"        # Claude API
fastapi = "^0.115.0"         # API framework
uvicorn = {extras = ["standard"], version = "^0.32.0"}  # ASGI server
pydantic = "^2.0"            # Data validation
pydantic-settings = "^2.0"   # Settings management
pyyaml = "^6.0"              # YAML parsing (cricket data, avatars)
httpx = "^0.28.0"            # Async HTTP client
python-dotenv = "^1.2.1"

# Phase 2: TTS dependencies (optional - install with: poetry install --extras tts)
google-cloud-texttospeech = {version = "^2.16.0", optional = true}
azure-cognitiveservices-speech = {version = "^1.35.0", optional = true}

# Phase 3: RAG dependencies (optional - install with: poetry install --extras rag)
chromadb = {version = "^0.6.0", optional = true}

[tool.poetry.extras]
tts = ["google-cloud-texttospeech", "azure-cognitiveservices-speech"]
tts-google = ["google-cloud-texttospeech"]
tts-azure = ["azure-cognitiveservices-speech"]
rag = ["chromadb"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
pyright = "^1.1.382"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = "^0.14.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pyright]
include = ["suksham_vachak"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require API keys)",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# TTS providers use try/except patterns that trigger style warnings
"suksham_vachak/tts/*.py" = ["TRY300", "TRY301", "SIM108"]
# RAG module uses descriptive error messages
"suksham_vachak/rag/*.py" = ["TRY003"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["suksham_vachak"]
